Sec16_Assn20: optimizations and upgraded SB to 3.0.2